--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,15 +54,15 @@
   --primary: oklch(78.64% 0.114 186.56);
   --primary-foreground: oklch(0.985 0.002 247.839);
   --secondary: oklch(0.967 0.003 264.542);
-  --secondary-foreground: oklch(24.327% 0.02474 263.967);
+  --secondary-foreground: oklch(27.05% 0.025 258.34);
   --muted: oklch(0.967 0.003 264.542);
   --muted-foreground: oklch(74.57% 0.030 254.72);
   --accent: oklch(0.967 0.003 264.542);
-  --accent-foreground: oklch(24.327% 0.02474 263.967);
+  --accent-foreground: oklch(27.05% 0.025 258.34);
   --destructive: oklch(61.37% 0.204 25.56);
   --border: oklch(0.928 0.006 264.531);
   --input: oklch(0.928 0.006 264.531);
-  --ring: oklch(0.707 0.022 261.325);
+  --ring: oklch(74.68% 0.124 184.89);
   --chart-1: oklch(70.96% 0.143 154.53);
   --chart-2: oklch(61.37% 0.204 25.56);
   --chart-3: oklch(0.398 0.07 227.392);
@@ -70,10 +70,10 @@
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(0.985 0.002 247.839);
   --sidebar-foreground: oklch(33.51% 0.033 260.91);
-  --sidebar-primary: oklch(24.327% 0.02474 263.967);
+  --sidebar-primary: oklch(27.05% 0.025 258.34);
   --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
   --sidebar-accent: oklch(0.967 0.003 264.542);
-  --sidebar-accent-foreground: oklch(24.327% 0.02474 263.967);
+  --sidebar-accent-foreground: oklch(27.05% 0.025 258.34);
   --sidebar-border: oklch(0.928 0.006 264.531);
   --sidebar-ring: oklch(0.707 0.022 261.325);
 }
@@ -81,28 +81,28 @@
 .dark {
   --background: oklch(24.33% 0.025 263.95);
   --foreground: oklch(0.985 0.002 247.839);
-  --card: oklch(24.327% 0.02474 263.967);
+  --card: oklch(27.05% 0.025 258.34);
   --card-foreground: oklch(0.985 0.002 247.839);
-  --popover: oklch(24.327% 0.02474 263.967);
+  --popover: oklch(27.05% 0.025 258.34);
   --popover-foreground: oklch(0.985 0.002 247.839);
   --primary: oklch(78.64% 0.114 186.56);
-  --primary-foreground: oklch(24.327% 0.02474 263.967);  
+  --primary-foreground: oklch(27.05% 0.025 258.34);  
   --secondary: oklch(0.278 0.033 256.848);
   --secondary-foreground: oklch(0.985 0.002 247.839);
-  --muted: oklch(24.327% 0.02474 263.967);;
+  --muted: oklch(27.05% 0.025 258.34);
   --muted-foreground: oklch(74.57% 0.030 254.72);
   --accent: oklch(0.278 0.033 256.848);
   --accent-foreground: oklch(0.985 0.002 247.839);
   --destructive: oklch(61.37% 0.204 25.56);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.551 0.027 264.364);
+  --ring: oklch(74.68% 0.124 184.89);
   --chart-1: oklch(70.96% 0.143 154.53);
   --chart-2: oklch(61.37% 0.204 25.56);
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(24.327% 0.02474 263.967);
+  --sidebar: oklch(27.05% 0.025 258.34);
   --sidebar-foreground: oklch(0.985 0.002 247.839);
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
