Transactions page with transactions table actions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,6 +124,17 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    /* Chrome, Safari, Edge */
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+    margin: 0;
+    }
+
+    /* Firefox */
+    input[type="number"] {
+      -moz-appearance: textfield;
+    }
   }
   body {
     @apply bg-background text-foreground;
